kubernetes/apps/whoami-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: whoami
  labels:
    app: whoami
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
