kubernetes/apps/whoami-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: whoami
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.127.0.0.1.nip.io`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: cert-whoami
    domains:
      - main: whoami.127.0.0.1.nip.io
